# uploads/endpoints.py
@@ -1,10 +1,13 @@
+import json
 import os
 from flask import request
 from werkzeug.utils import secure_filename
-from dronelib.server import gcs
 from auth.core import permission
+from basehandler import api_response
+
 UPLOAD_FOLDER = 'C:/Users/SIKIRU/Desktop/GCSA/uploads'
 
+DOWNLOAD_FOLDER = 'C:/Users/SIKIRU/Desktop/GCSA/uploads/paths.json'
 ALLOWED_EXTENSIONS = {'json', 'py'}
 
 
@@ -24,10 +27,14 @@ def upload(**kwargs):
         filename = secure_filename(file.filename)
         file.save(os.path.join(UPLOAD_FOLDER, filename))
     if file.filename == 'paths.json':
-        gcs.upload_path()
         return 'path file upload successful'
     if file.filename == 'config.py':
         print(file.filename)
         return 'config file upload successful'
 
 
+def download():
+    file = DOWNLOAD_FOLDER
+    with open(file, 'rb') as f:
+        data = json.load(f)
+        return api_response(data)
